crates/mako/src/tree_shaking/snapshots/mako__tree_shaking__tree_shaking__tests__tree_shaking_import_self.snap
---
source: crates/mako/src/tree_shaking/tree_shaking.rs
expression: content
---
(function() {
    var chunksIdToUrlMap = {};
    var cssChunksIdToUrlMap = {};
    var e = "index.js";
    var cssInstalledChunks = {
        "index.js": 0
    };
    var m = {
        "a.js": function(module, exports, require) {
            Object.defineProperty(exports, "__esModule", {
                value: true
            });
            function _export(target, all) {
                for(var name in all)Object.defineProperty(target, name, {
                    enumerable: true,
                    get: all[name]
                });
            }
            _export(exports, {
                default: function() {
                    return _default;
                },
                boxShadow: function() {
                    return boxShadow;
                }
            });
            var _interop_require_default = require("@swc/helpers/_/_interop_require_default");
            var _a = _interop_require_default._(require("a.js"));
            const TypeCodeColor = {};
            var _default = (type)=>{
                if (type) return TypeCodeColor[type];
                else return 'rgba(0,0,0,0)';
            };
            function boxShadow(type) {
                return `inset 0 0 0 3px ${(0, _a.default)(type)}`;
            }
        },
        "b.js": function(module, exports, require) {
            Object.defineProperty(exports, "__esModule", {
                value: true
            });
            function _export(target, all) {
                for(var name in all)Object.defineProperty(target, name, {
                    enumerable: true,
                    get: all[name]
                });
            }
            _export(exports, {
                bb: function() {
                    return _b.b;
                },
                b: function() {
                    return b;
                }
            });
            var _b = require("b.js");
            const b = 'b';
        },
        "c.js": function(module, exports, require) {
            Object.defineProperty(exports, "__esModule", {
                value: true
            });
            function _export(target, all) {
                for(var name in all)Object.defineProperty(target, name, {
                    enumerable: true,
                    get: all[name]
                });
            }
            _export(exports, {
                a: function() {
                    return a;
                },
                a1: function() {
                    return a1;
                }
            });
            var _c = require("c.js");
            const a = 'a';
            const a1 = 'a1';
            console.log('xxx', _c.a);
        },
        "index.js": function(module, exports, require) {
            Object.defineProperty(exports, "__esModule", {
                value: true
            });
            var _a = require("a.js");
            var _b = require("b.js");
            var _c = require("c.js");
            const bcc = (0, _a.boxShadow)();
            console.log('bb', _b.bb, bcc, _c.a1);
        }
    };
    function createRuntime(makoModules, entryModuleId) {
        var modulesRegistry = {};
        function requireModule(moduleId) {
            if (moduleId === '$$IGNORED$$') return {};
            var cachedModule = modulesRegistry[moduleId];
            if (cachedModule !== undefined) {
                if (cachedModule.error) {
                    throw cachedModule.error;
                }
                return cachedModule.exports;
            }
            var module = {
                id: moduleId,
                exports: {}
            };
            modulesRegistry[moduleId] = module;
            try {
                var execOptions = {
                    id: moduleId,
                    module: module,
                    factory: makoModules[moduleId],
                    require: requireModule
                };
                requireModule.requireInterceptors.forEach(function(interceptor) {
                    interceptor(execOptions);
                });
                execOptions.factory.call(execOptions.module.exports, execOptions.module, execOptions.module.exports, execOptions.require);
            } catch (e) {
                modulesRegistry[moduleId].error = e;
                throw e;
            }
            return module.exports;
        }
        requireModule.requireInterceptors = [];
        !(function() {
            requireModule.chunkEnsures = {};
            requireModule.ensure = function(chunkId) {
                return Promise.all(Object.keys(requireModule.chunkEnsures).reduce(function(promises, key) {
                    requireModule.chunkEnsures[key](chunkId, promises);
                    return promises;
                }, []));
            };
        })();
        !(function() {
            requireModule.jsonpInstalled = {};
            var installedChunks = requireModule.jsonpInstalled;
            requireModule.chunkEnsures.jsonp = function(chunkId, promises) {
                var data = installedChunks[chunkId];
                if (data === 0) return;
                if (data) {
                    promises.push(data[2]);
                } else {
                    var promise = new Promise(function(resolve, reject) {
                        data = installedChunks[chunkId] = [
                            resolve,
                            reject
                        ];
                    });
                    promises.push((data[2] = promise));
                    var url = requireModule.publicPath + chunksIdToUrlMap[chunkId];
                    var error = new Error();
                    var onLoadEnd = function(event) {
                        data = installedChunks[chunkId];
                        if (data !== 0) installedChunks[chunkId] = undefined;
                        if (data) {
                            var errorType = event && event.type;
                            var src = event && event.target && event.target.src;
                            error.message = 'Loading chunk ' + chunkId + ' failed. (' + errorType + ' : ' + src + ')';
                            error.name = 'ChunkLoadError';
                            error.type = errorType;
                            data[1](error);
                        }
                    };
                    requireModule.loadScript(url, onLoadEnd, 'chunk-' + chunkId);
                    return promise;
                }
            };
        })();
        !(function() {
            var inProgress = {};
            requireModule.loadScript = function(url, done, key) {
                if (inProgress[url]) {
                    return inProgress[url].push(done);
                }
                var script = document.createElement('script');
                script.timeout = 120;
                script.src = url;
                inProgress[url] = [
                    done
                ];
                var onLoadEnd = function(prev, event) {
                    clearTimeout(timeout);
                    var doneFns = inProgress[url];
                    delete inProgress[url];
                    if (script.parentNode) script.parentNode.removeChild(script);
                    if (doneFns) {
                        doneFns.forEach(function(fn) {
                            return fn(event);
                        });
                    }
                    if (prev) return prev(event);
                };
                var timeout = setTimeout(onLoadEnd.bind(null, undefined, {
                    type: 'timeout',
                    target: script
                }), 120000);
                script.onerror = onLoadEnd.bind(null, script.onerror);
                script.onload = onLoadEnd.bind(null, script.onload);
                document.head.appendChild(script);
            };
        })();
        !(function() {
            requireModule.cssInstalled = cssInstalledChunks;
            requireModule.findStylesheet = function(url) {
                return Array.from(document.querySelectorAll('link[href][rel=stylesheet]')).find(function(link) {
                    var linkUrl = link.getAttribute('href').split('?')[0];
                    return linkUrl === url || linkUrl === requireModule.publicPath + url;
                });
            };
            requireModule.createStylesheet = function(chunkId, url, oldTag, resolve, reject) {
                var link = document.createElement('link');
                link.rel = 'stylesheet';
                link.type = 'text/css';
                link.href = url;
                link.onerror = link.onload = function(event) {
                    link.onerror = link.onload = null;
                    if (event.type === 'load') {
                        cssInstalledChunks[chunkId] = 0;
                        resolve();
                    } else {
                        delete cssInstalledChunks[chunkId];
                        var errorType = event && event.type;
                        var realHref = event && event.target && event.target.href;
                        var err = new Error('Loading CSS chunk ' + chunkId + ' failed.\n(' + realHref + ')');
                        err.code = 'CSS_CHUNK_LOAD_FAILED';
                        err.type = errorType;
                        err.request = realHref;
                        link.parentNode.removeChild(link);
                        reject(err);
                    }
                };
                if (oldTag) {
                    oldTag.parentNode.insertBefore(link, oldTag.nextSibling);
                } else {
                    document.head.appendChild(link);
                }
                return link;
            };
            requireModule.chunkEnsures.css = function(chunkId, promises) {
                if (cssInstalledChunks[chunkId]) {
                    promises.push(cssInstalledChunks[chunkId]);
                } else if (cssInstalledChunks[chunkId] !== 0 && cssChunksIdToUrlMap[chunkId]) {
                    cssInstalledChunks[chunkId] = new Promise(function(resolve, reject) {
                        var url = cssChunksIdToUrlMap[chunkId];
                        var fullUrl = requireModule.publicPath + url;
                        if (requireModule.findStylesheet(url)) {
                            resolve();
                        } else {
                            requireModule.createStylesheet(chunkId, fullUrl, null, resolve, reject);
                        }
                    });
                    promises.push(cssInstalledChunks[chunkId]);
                    return promises;
                }
            };
        })();
        var jsonpCallback = function(data) {
            var installedChunks = requireModule.jsonpInstalled;
            var chunkIds = data[0];
            var modules = data[1];
            if (chunkIds.some(function(id) {
                return installedChunks[id] !== 0;
            })) {
                registerModules(modules);
            }
            for(var i = 0; i < chunkIds.length; i++){
                var id = chunkIds[i];
                if (installedChunks[id]) {
                    installedChunks[id][0]();
                }
                installedChunks[id] = 0;
            }
        };
        var registerModules = function(modules) {
            for(var id in modules){
                makoModules[id] = modules[id];
            }
        };
        !function() {
            requireModule.publicPath = "/";
        }();
        !function() {
            registerModules({
                "@swc/helpers/_/_interop_require_default": function(module, exports, require) {
                    Object.defineProperty(exports, "__esModule", {
                        value: true
                    });
                    function _export(target, all) {
                        for(var name in all)Object.defineProperty(target, name, {
                            enumerable: true,
                            get: all[name]
                        });
                    }
                    _export(exports, {
                        _interop_require_default: function() {
                            return _interop_require_default;
                        },
                        _: function() {
                            return _interop_require_default;
                        }
                    });
                    function _interop_require_default(obj) {
                        return obj && obj.__esModule ? obj : {
                            default: obj
                        };
                    }
                },
                "@swc/helpers/_/_interop_require_wildcard": function(module, exports, require) {
                    Object.defineProperty(exports, "__esModule", {
                        value: true
                    });
                    function _export(target, all) {
                        for(var name in all)Object.defineProperty(target, name, {
                            enumerable: true,
                            get: all[name]
                        });
                    }
                    _export(exports, {
                        _interop_require_wildcard: function() {
                            return _interop_require_wildcard;
                        },
                        _: function() {
                            return _interop_require_wildcard;
                        }
                    });
                    function _getRequireWildcardCache(nodeInterop) {
                        if (typeof WeakMap !== "function") return null;
                        var cacheBabelInterop = new WeakMap();
                        var cacheNodeInterop = new WeakMap();
                        return (_getRequireWildcardCache = function(nodeInterop) {
                            return nodeInterop ? cacheNodeInterop : cacheBabelInterop;
                        })(nodeInterop);
                    }
                    function _interop_require_wildcard(obj, nodeInterop) {
                        if (!nodeInterop && obj && obj.__esModule) return obj;
                        if (obj === null || typeof obj !== "object" && typeof obj !== "function") return {
                            default: obj
                        };
                        var cache = _getRequireWildcardCache(nodeInterop);
                        if (cache && cache.has(obj)) return cache.get(obj);
                        var newObj = {};
                        var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor;
                        for(var key in obj)if (key !== "default" && Object.prototype.hasOwnProperty.call(obj, key)) {
                            var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null;
                            if (desc && (desc.get || desc.set)) Object.defineProperty(newObj, key, desc);
                            else newObj[key] = obj[key];
                        }
                        newObj.default = obj;
                        if (cache) cache.set(obj, newObj);
                        return newObj;
                    }
                },
                "@swc/helpers/_/_export_star": function(module, exports, require) {
                    Object.defineProperty(exports, "__esModule", {
                        value: true
                    });
                    function _export(target, all) {
                        for(var name in all)Object.defineProperty(target, name, {
                            enumerable: true,
                            get: all[name]
                        });
                    }
                    _export(exports, {
                        _export_star: function() {
                            return _export_star;
                        },
                        _: function() {
                            return _export_star;
                        }
                    });
                    function _export_star(from, to) {
                        Object.keys(from).forEach(function(k) {
                            if (k !== "default" && !Object.prototype.hasOwnProperty.call(to, k)) Object.defineProperty(to, k, {
                                enumerable: true,
                                get: function() {
                                    return from[k];
                                }
                            });
                        });
                        return from;
                    }
                }
            });
        }();
        var exports = requireModule(entryModuleId);
        return {
            exports: exports,
            requireModule: requireModule,
            _modulesRegistry: modulesRegistry,
            _jsonpCallback: jsonpCallback,
            _makoModuleHotUpdate: requireModule.applyHotUpdate
        };
    }
    var runtime = createRuntime(m, e);
    var root = typeof globalThis !== 'undefined' ? globalThis : self;
    root.jsonpCallback = runtime._jsonpCallback;
    root.modulesRegistry = runtime._modulesRegistry;
    root.makoModuleHotUpdate = runtime._makoModuleHotUpdate;
})();

//# sourceMappingURL=index.js.map
